0.6.3 - "Minor changes"

  * Now compiles with quicklog disabled
  * Issuing "QUICKLOG" command without parameter now prints quicklog headers
  * Option "noidentifycapab" to suppress IDENTIFY-* requests
  * Option autoqlog now defaults to -1. When autoqlog is set to -1, full
    quicklog will be replayed (on attach).
  * Finally got rid of bzeros
  * Fixed typo in misc/miaurc.in


0.6.2 - "Meow"

  * Fixed crash with qlog-to-inbox feature if inbox failed to open
  * miau no longer thinks it doesn't have The Nick after being disconnected
    with correct nick, disconnected, given wrong nick at connect, then
    reconnected with preferred nick.
  * Channels are now reintroduces to the client before quicklog is replayed.
  * Added command to replay specified amount of quicklog
  * Added command FLUSHQLOG to flush specified time from quicklog
  * Added configuration option to (not to) replay quicklog on attach
  * Removed obsolete bits from README


0.6.1 - "All the trouble and twice the bugs"

  * Fixed snprintf size with forwardmsg in server.c
  * Fool-proofed reading inbox
  * Fixed jumping to certain server right after rehash
  * Fixed handling of failing to open logfiles
  * Fixed client-PING reply
  * Fixed quicklog with timestamps in the beginning and qlogflush set to false
  * Fixed not replaying quicklog if not on any channel
  * Fixed issue with channel flag 'O'
  * Parted channels are no longer joined at attach if they have no qlog
    and flushqlog is set to FALSE.
  * miau again accepts commands when connection to the server is lost
  * Reply to PART and JOIN when not connected to the server
  * Allow CTCP-reply right after start-up to keep some services happy
  * Call setvbuf only if statelog is enabled
  * stdout is no longer redirected in a file we cannot write to
  * miau no longer creates LOGDIR if logging isn't compiled in or used
  * Fixed buffer size in irc.c:irc_notice
  * Free forwardmsg in miauc.c:escape